# ChangeLog for x11-libs/libXres
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.31 2006/12/16 16:55:28 joshuabaergen Exp $

*libXres-1.0.3 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXres-1.0.3.ebuild:
  Version bump for 7.2.  Build/dist fix only.

*libXres-1.0.2 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXres-1.0.2.ebuild:
  Version bump.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXres-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXres-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXres-1.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -files/fix_shadow_manpages.patch, -libXres-1.0.0-r1.ebuild:
  Pull old ebuild.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> libXres-1.0.1.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXres-1.0.1.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXres-1.0.1.ebuild:
  x86 stable.

*libXres-1.0.1 (29 Apr 2006)

  29 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXres-1.0.1.ebuild:
  Version bump.  Cygwin build fix.  Includes fix for shadow manpages.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-libXres-1.0.0-r1, Manifest:
  Revert to working digest.

  28 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-libXres-1.0.0-r1, Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  libXres-1.0.0-r1.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libXres-1.0.0-r1.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

*libXres-1.0.0-r1 (22 Feb 2006)
