@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXres
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.31 2006/12/16 16:55:28 joshuabaergen Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.32 2007/02/04 18:26:10 joshuabaergen Exp $
+
+  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  libXres-1.0.1.ebuild, libXres-1.0.2.ebuild, libXres-1.0.3.ebuild:
+  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.
 
 *libXres-1.0.3 (16 Dec 2006)
 
